# TDD_testing

./: CMakeLists.txt  README.md
src/: Bank.cpp  Bank.hpp  Dollar.cpp  Dollar.hpp  Expression.hpp  Money.cpp  Money.hpp  Sum.cpp  Sum.hpp  main.cpp
test/: main.cpp  testMoneyCalc.cpp
